// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render SectionHeader 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F5F5F5",
      "borderBottomColor": "#C7CDD1",
      "borderBottomWidth": 0.5,
      "flex": 1,
      "height": 24,
      "justifyContent": "center",
      "paddingLeft": 16,
      "paddingRight": 8,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "backgroundColor": "#F5F5F5",
          "color": "#73818C",
          "fontSize": 14,
          "fontWeight": "600",
        },
        Object {
          "fontFamily": ".SFUIDisplay-semibold",
        },
      ]
    }
  >
    I am a section header
  </Text>
</View>
`;

exports[`renders heading1 correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#2D3B45",
        "fontFamily": ".SFUIDisplay-semibold",
        "fontSize": 20,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders heading2 correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#2D3B45",
        "fontFamily": ".SFUIDisplay-bold",
        "fontSize": 16,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders modalActivityIndicatorAlertText correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#fff",
        "fontFamily": ".SFUIDisplay-semibold",
        "fontSize": 24,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders paragraph correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#7F91A7",
        "fontSize": 16,
        "lineHeight": 23,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders text correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#2D3B45",
        "fontSize": 16,
      },
      undefined,
      Object {
        "fontFamily": ".SFUIDisplay",
      },
    ]
  }
/>
`;

exports[`renders text with fontWeight bold 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#2D3B45",
        "fontSize": 16,
      },
      Object {
        "fontWeight": "bold",
      },
      Object {
        "fontFamily": ".SFUIDisplay-bold",
      },
    ]
  }
/>
`;

exports[`renders text with fontWeight semibold 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "color": "#2D3B45",
        "fontSize": 16,
      },
      Object {
        "fontWeight": "600",
      },
      Object {
        "fontFamily": ".SFUIDisplay-semibold",
      },
    ]
  }
/>
`;

exports[`renders textInput correctly 1`] = `
<TextInput
  style={
    Array [
      Object {
        "fontFamily": ".SFUIDisplay",
      },
      Object {
        "fontSize": 17,
      },
      undefined,
      Object {
        "fontFamily": ".SFUIDisplay",
      },
    ]
  }
/>
`;
